--- a/requirements.txt
+++ b/requirements.txt
@@ -182,7 +182,7 @@ nltk==3.9.1
 numba==0.58.1
 numpy==1.26.2
 omegaconf==2.3.0
-openai==1.57.2
+openai>=1.0.0
 openai-whisper==20231117
 optuna==4.4.0
 ordered-set==4.1.0
@@ -211,7 +211,7 @@ psycopg2-binary==2.9.10
 pure_eval==0.2.3
 puremagic==1.29
 py4j==0.10.9.7
-pyannote.audio==3.3.2
+pyannote.audio>=3.1.0
 pyannote.core==5.0.0
 pyannote.database==5.1.3
 pyannote.metrics==3.2.1
@@ -223,7 +223,7 @@ pycparser==2.21
 pydantic==2.10.3
 pydantic_core==2.27.1
 pydot==4.0.1
-pydub==0.25.1
+pydub>=0.25.1
 Pygments==2.19.1
 PyJWT==2.10.1
 pyodbc==5.2.0
@@ -233,7 +233,7 @@ pypiwin32==223
 pyspark==3.5.1
 python-dateutil==2.9.0.post0
 python-docx==0.8.11
-python-dotenv==1.0.1
+python-dotenv>=1.0.0
 python-engineio==4.10.1
 python-slugify==8.0.4
 python-socketio==5.11.4
