--- a/requirements.txt
+++ b/requirements.txt
@@ -137,7 +137,7 @@ langchain-text-splitters==0.3.2
 langsmith==0.2.2
 lazy_loader==0.4
 leather==0.4.0
-librosa==0.11.0
+librosa>=0.10.0
 lightning==2.5.2
 lightning-utilities==0.15.0
 llama-cloud==0.1.6
@@ -180,7 +180,7 @@ nibabel==5.3.2
 nipype==1.10.0
 nltk==3.9.1
 numba==0.58.1
-numpy==1.26.2
+numpy>=1.24.0
 omegaconf==2.3.0
 openai>=1.0.0
 openai-whisper==20231117
@@ -188,7 +188,7 @@ optuna==4.4.0
 ordered-set==4.1.0
 orjson==3.10.12
 packaging==23.2
-pandas==2.2.3
+pandas>=2.0.0
 papermill==2.6.0
 parsedatetime==2.6
 parso==0.8.4
@@ -207,12 +207,12 @@ proto-plus==1.25.0
 protobuf==5.29.1
 prov==2.0.2
 psutil==7.0.0
-psycopg2-binary==2.9.10
+psycopg2-binary>=4.0.39
 pure_eval==0.2.3
 puremagic==1.29
 py4j==0.10.9.7
 pyannote.audio>=3.1.0
-pyannote.core==5.0.0
+pyannote.core>=5.0.0
 pyannote.database==5.1.3
 pyannote.metrics==3.2.1
 pyannote.pipeline==3.0.1
@@ -226,7 +226,7 @@ pydot==4.0.1
 pydub>=0.25.1
 Pygments==2.19.1
 PyJWT==2.10.1
-pyodbc==5.2.0
+pyodbc>=4.0.39
 pyparsing==3.2.0
 pypdf==5.1.0
 pypiwin32==223
@@ -270,7 +270,7 @@ sniffio==1.3.1
 snowplow-tracker==1.0.4
 sortedcontainers==2.4.0
 sounddevice==0.4.6
-soundfile==0.12.1
+soundfile>=0.12.1
 soupsieve==2.6
 soxr==0.5.0.post1
 speechbrain==1.0.3
@@ -289,10 +289,10 @@ text-unidecode==1.3
 threadpoolctl==3.6.0
 tiktoken==0.8.0
 tools==1.0.2
-torch==2.7.1
+torch>=2.0.0
 torch-audiomentations==0.12.0
 torch_pitch_shift==1.2.5
-torchaudio==2.7.1
+torchaudio>=2.0.0
 torchmetrics==1.8.0
 tornado==6.5.1
 tqdm==4.67.1
@@ -316,3 +316,4 @@ wrapt==1.17.0
 wsproto==1.2.0
 yarl==1.18.3
 zipp==3.21.0
+audioop-lts>=0.2.1; python_version>='3.13'
