update for easy setup

--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,30 @@
 # Database Configuration
-DB_SERVER=localhost
+DB_SERVER=localhost\SQLEXPRESS
 DB_DATABASE=CallAnalysis
-DB_USERNAME=CallAnalyzerUser
+DB_USERNAME=
 DB_PASSWORD=
 DB_DRIVER=ODBC Driver 17 for SQL Server
 DB_TRUSTED_CONNECTION=false
 
+# Custom connection string to bypass the Encrypt issue
+SQL_CONNECTION_STRING=Server=localhost\SQLEXPRESS;Database=CallAnalysis;UID=sa;PWD=!;TrustServerCertificate=Yes;
 # Whisper Configuration
 WHISPER_MODEL_SIZE=base
-WHISPER_LANGUAGE=es
+WHISPER_LANGUAGE=
 WHISPER_DEVICE=cpu
 WHISPER_COMPUTE_TYPE=int8
-
 # Analysis Configuration
 SPEAKER_SEPARATION_ENABLED=true
 CONFIDENCE_THRESHOLD=0.7
 # Optional: Custom keywords (comma-separated)
-# ANALYSIS_KEYWORDS=gracias,por favor,disculpe,buenos días
-
+ANALYSIS_KEYWORDS=gracias,por favor,disculpe,buenos días
 # Processing Configuration
 INPUT_DIRECTORY=./input
 OUTPUT_DIRECTORY=./output
-
 # Hugging Face Token for Speaker Diarization
 HUGGINGFACE_TOKEN=
-
 # OpenAI Configuration
-OPENAI_API_KEY=sk-
-
+OPENAI_API_KEY=
 # Optional: Logging Level
 LOG_LEVEL=INFO
+SAVE_TO_DATABASE=true
